# embedding-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh
include/embedding-library/: float.h  int16.h  int8.h  int8_embedding_table.h
include/embedding-library/arm/: float.h  int8.h
include/embedding-library/fallback/: float.h  int8.h
include/embedding-library/x86/: float.h  int8.h
src/: int8_embedding_table.c
tests/: CMakeLists.txt
